<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zamzam.chat.components.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_toggle_push_messaging"
        android:title="@string/preferences__signal_messages_and_calls"
        android:summary="@string/preferences__free_private_messages_and_calls"/>

    <Preference
        android:key="pref_advanced_pin_settings"
        android:title="@string/preferences__advanced_pin_settings"
        android:visibility="gone"
        app:isPreferenceVisible="false"
        tools:visibility="gone" />

    <Preference
        android:key="pref_choose_identity"
        android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list"
        android:title="@string/preferences__choose_identity"
        android:visibility="gone"
        app:isPreferenceVisible="false"
        tools:visibility="gone" />

    <Preference
        android:key="pref_internal"
        android:title="@string/preferences__internal_preferences"
        android:visibility="gone"
        app:isPreferenceVisible="false"
        tools:visibility="gone" />

    <Preference
        android:key="pref_submit_debug_logs"
        android:title="@string/preferences__submit_debug_log"
        android:visibility="gone"
        app:isPreferenceVisible="false"
        tools:visibility="gone" />

</PreferenceScreen>
